<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Zielnik</string>
    <string name="title_activity_main">Zielnik</string>
    <string name="package_name">pl.zielnik.app</string>
    <string name="custom_url_scheme">pl.zielnik.app</string>
    <!-- skróty aplikacji (xml/shortcuts.xml): neutralne etykiety, widoczne także przy włączonym trybie dyskretnym -->
    <string name="shortcut_use_short">Zapisz</string>
    <string name="shortcut_use_long">Szybki zapis</string>
    <string name="shortcut_symptoms_short">Samopoczucie</string>
    <string name="shortcut_symptoms_long">Samopoczucie dziś</string>
    <string name="shortcut_report_short">Raport</string>
    <string name="shortcut_report_long">Raport</string>
    <!-- widżet ekranu głównego (POM-13): neutralne napisy, bez nazwy aplikacji i słów o roślinie -->
    <string name="widget_label">Zapas</string>
    <string name="widget_add">Zapisz</string>
    <string name="widget_open">Otwórz</string>
    <string name="widget_description">Zapas i szybki zapis</string>
    <string name="widget_days_one">Starczy na %d dzień</string>
    <string name="widget_days_many">Starczy na %d dni</string>
    <string name="widget_check">Sprawdź zapas</string>
    <string name="widget_none">–</string>
</resources>
